Avoid per-call array copy in ConstantPool.getContained()
List.copyOf allocates Object[N] and arraycopies N references on every
call. ConstantPool.m_listConst is the largest list in the structure
(thousands of entries for a real module), and getContained() is on the
hot path for every full traversal (registerConstants, validate,
isModified, resetModified, resolve, purgeCondition).

The XvmStructure.getContained() contract already says "the caller
should treat the return value as if it were immutable", and
Component.getContained() returns children() — a live values() view —
without a defensive copy. Collections.unmodifiableList matches that
cost class (O(1) wrapper, no copy) while still rejecting accidental
mutation through the returned reference.